--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
   overflow: hidden;
   margin-top: 40px;
   margin-bottom: 70px;
-  background-image: url(./img/pexels-andrea-piacquadio-842546.jpg);
+  background-image: url(pexels-andrea-piacquadio-842546.jpg);
   background-size: cover;
   background-attachment: scroll;
   background-position: center top;
